# datamuse-api-wrapper

./: Cargo.toml  README.md
src/: lib.rs  request.rs  response.rs
