[package]
name = "datamuse-api-wrapper"
version = "0.1.0"
authors = ["slogemann1 <sllogemann1@gmail.com>"]
edition = "2018"
description = "A wrapper library for the Datamuse api"
license = "MIT"
repository = "https://github.com/slogemann1/datamuse-api-wrapper"
readme = "README.md"
keywords = ["word", "english", "autocomplete", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.10"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }